# mini-muse

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  batch_video_generation.py  event_viewer_error_analysis_handover.md  generate_images.py  loadimage_min.json  pyproject.toml  stablediffusion  test_generate.py  test_video_generation.py
.devcontainer/: devcontainer.json
.kiro/specs/ai-image-feedback-app/: design.md  requirements.md  tasks.md
config/: default_config.yaml
doc/: CHANGELOG_20251003.md  CHANGELOG_20251015163942.md  CHANGELOG_20251109141511.md  tensorrt_sd35_docker_setup.md  tensorrt_sd35_quickstart.md  tensorrt_sd35_setup_guide.md
mini_muse/: __init__.py  batch_video_generation.py  comfy_video_generator.py  comfyui_client.py  generate_images.py  main.py  ollama_video_prompt.py  prompt_generator.py
mini_muse/config/: __init__.py  config.py  models.py
mini_muse/core/: __init__.py
mini_muse/services/: __init__.py  image_generation.py  nvidia_sd35.py  prompt_enhancement.py  upscaling.py  video_generation.py
mini_muse/ui/: __init__.py
prompts/: prompt_templates 枠の中の絵_20250408.json  prompt_templates.json  prompt_templates_Tシャツデザイン_20250127.json  prompt_templates_polaroid_retro_v2_20251022.json  prompt_templates_polaroid_retro_v3_20251022.json  prompt_templates_polaroid_timeslip_20251022.json  prompt_templates_コズミックホラー王道_20260220.json  prompt_templates_コズミックホラー王道_20260220_怪物化白黒強化.json  prompt_templates_バイオメカニカル_20251118.json  prompt_templates_モンスターの絵_20250408.json  prompt_templates_モンスターの絵_20250410.json  prompt_templates_モンスターの絵_cthulhu_20251022.json  prompt_templates_モンスターの絵_cthulhu_mythos_beksinski_20251030.json  prompt_templates_モンスターの絵_cthulhu_pure_20251022.json  prompt_templates_モンスターの絵_enhanced_20251020.json  prompt_templates_抽象悪夢_20250108.json  prompt_templates_抽象悪夢_20250114.json  prompt_templates_抽象悪夢_20250116.json  prompt_templates_抽象悪夢_20250122.json  prompt_templates_抽象画_20250117.json  prompt_templates_抽象画_enhanced_20250117.json  prompt_templates_抽象画_final_20250117.json  prompt_templates_枠の中の絵_20250205.json  prompt_templates_深海の怪物_20251118.json  prompt_templates_現代幾何学抽象画_20260120.json  prompt_templates_統計ML可視化_20250107.json  prompt_templates_黒背景_深海老怪_20251118.json
scripts/: dev_setup.sh  quickstart.sh  run_tensorrt_container.sh  setup_models.sh  setup_tensorrt.sh
tasks/: lessons.md  todo.md
tests/: __init__.py  test_comfyui_client.py  test_generate.py  test_integration.py  test_ollama_video_prompt.py  test_placeholder_resolution.py  test_prompt_generator.py  test_simple_generate.py  test_video_generation.py
workflows/: sd3.5_large_turbo_upscale.json  wan22_i2v_workflow.json
